--- a/application/mobile/view/goods/order.html
+++ b/application/mobile/view/goods/order.html
@@ -249,6 +249,11 @@
                 }
 
             },
+            error: function (data) {
+                layer.msg('服务器繁忙，请稍后再试', function () {
+
+                })
+            }            
 
         });
     })
