--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -204,8 +204,7 @@
 					data: { 'id': id ,'act':'cancel'},
 
 					success: function (data) {
-						if (data.status == 1) {
-								
+						if (data.status == 1) {		
 							layer.msg(data.msg, { time: 1000 },function () {
                                      acc.children().children().attr('src', '__STATIC__/img/purchase/product/collection@2x.png').removeClass('active')
 							})								
@@ -214,8 +213,13 @@
 
 							})
 						}
-
 					},
+					error: function (data) {
+						layer.msg('服务器繁忙，请稍后再试', function () {
+
+						})
+					}
+
 
 				});				
 			}else{
@@ -243,6 +247,11 @@
 						}
 
 					},
+					error: function (data) {
+						layer.msg('服务器繁忙，请稍后再试', function () {
+
+						})
+					}					
 
 				});					
 			}
