--- a/application/mobile/view/user/top_up_detail.html
+++ b/application/mobile/view/user/top_up_detail.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no" />
@@ -14,12 +13,11 @@
 		<link rel="stylesheet" href="__STATIC__/css/my/chongzhi_detail.css" />
 
 	</head>
-
 	<body>
 		<div class="wrap_frame">
 			<!--public head-->
 			<div class="lb_headWrap  ">
-				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/my_walet'">
 					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
 				</p>
 				<span>充值记录</span>
@@ -48,19 +46,6 @@
 					</li>
 				{/volist}
 			</ul>
-			
-			
-			
-			
-			
-			
-			
-			
-			
-
-			
-
-		
 		</div>
 
 		<script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
