修改头像后更新缓存

--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -43,13 +43,13 @@
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
 				</li>
-				<li onClick="window.location.href='/mobile/user/distribution'">
+				<!-- <li onClick="window.location.href='/mobile/user/distribution'">
 
 					<img class="img1" src="__STATIC__/img/my/fenxiao@2x.png" />
 					<a >我的分销</a>
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
-				</li>
+				</li> -->
 				<li onClick="window.location.href='/mobile/user/my_walet'">
 
 				  
@@ -93,13 +93,13 @@
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
 				</li>
-				<li>
+				<!-- <li>
 
 					<img class="img1" src="__STATIC__/img/my/kefu@2x.png" />
 					<a>客服中心</a>
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
-				</li>
+				</li> -->
 				<li onclick="window.location.href='/mobile/user/set_up'">
 
 					<img class="img1" src="__STATIC__/img/my/shezhi@2x.png" />
