--- a/application/mobile/view/user/qr_code.html
+++ b/application/mobile/view/user/qr_code.html
@@ -49,7 +49,7 @@
 			<div class="qr-code">
 				<input type="text" class="urlText" id="urlText" value="http://jindo.dev.naver.com/collie" style="width:80%">
 				<div class="qr-code-img" id="qrcode">
-					<!-- <img src="__STATIC__/img/my/erweima.png" /> -->
+					<img src="{$src}" alt="我的二维码" />
 				</div>
 			</div>
 		</div>
@@ -58,34 +58,7 @@
 		<script src="__STATIC__/js/my/qrcode.js"></script>
 		
 		<script type="text/javascript">
-			var qrcode = new QRCode(document.getElementById("qrcode"),{
-				width : 100,
-				height : 100
-			});
 			
-		function makeCode () {		
-			var elText = document.getElementById("urlText");
-			
-			if (!elText.value) {
-				alert("Input a text");
-				elText.focus();
-				return;
-			}
-			
-			qrcode.makeCode(elText.value);
-		}
-		
-		makeCode();
-		
-		$("#urlText").
-			on("blur", function () {
-				makeCode();
-			}).
-			on("keydown", function (e) {
-				if (e.keyCode == 13) {
-					makeCode();
-				}
-			});
 		</script>
 	</body>
 </html>
