pc端：修改网页头部信息

--- a/application/admin/view/system/setting.html
+++ b/application/admin/view/system/setting.html
@@ -184,6 +184,7 @@
 	<input id="logo-flag" type="hidden">
 	<input type="text" name="module" value="setting" >
 </form>
+<iframe name="ajaxR-form" style="display:none;"></iframe>
 <iframe name="ajaxR" style="display:none;"></iframe>
 <script type="text/javascript">
 	window.onload = function() { 
