--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title class="pageTopTitle" page-id="0">首页</title>
+    <title class="pageTopTitle" page-id="0">首页{$web_setting.web_name}{$web_setting.web_title}</title>
+    <meta name="keywords" content="{$web_setting.key_words}" />
+    <meta name="description" content="{$web_setting.copyright}" />
+    <link rel="shortcut icon" href="{$web_setting.title_logo}" type="image/*" />
     <link rel="stylesheet" href="__STATIC__/css/public/swiper.css">
     <link rel="stylesheet" href="__STATIC__/css/public/public.css">
     <link rel="stylesheet" href="__STATIC__/css/home/index.css">
