--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -2,7 +2,10 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>个人中心</title>
+		<title class="pageTopTitle">个人中心{$web_setting.web_name}{$web_setting.web_title}</title>
+		<meta name="keywords" content="{$web_setting.key_words}" />
+		<meta name="description" content="{$web_setting.copyright}" />
+		<link rel="shortcut icon" href="{$web_setting.title_logo}" type="image/*" />
 		<link rel="stylesheet" href="__STATIC__/css/public/public.css" />
 		<link rel="stylesheet" href="__STATIC__/css/personal/personal.css" />
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js" ></script>
@@ -15,7 +18,7 @@
 	<div class="header">
                 <div class="inner-wrap">
                     <div class="logo">
-                        <a href="index.html"></a>
+                        <a href="/index/index/index"></a>
                     </div>
                     <div class="nav">
                         <ul>
