--- a/application/index/view/about/index.html
+++ b/application/index/view/about/index.html
@@ -3,7 +3,10 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title class="pageTopTitle" page-id="5">关于我们</title>
+		<title class="pageTopTitle" page-id="5">关于我们{$web_setting.web_name}{$web_setting.web_title}</title>
+		<meta name="keywords" content="{$web_setting.key_words}" />
+		<meta name="description" content="{$web_setting.copyright}" />
+		<link rel="shortcut icon" href="{$web_setting.title_logo}" type="image/*" />
 		<link rel="stylesheet" href="__STATIC__/css/public/public.css" />
 		<link rel="stylesheet" href="__STATIC__/css/about/about.css" />
 		
