--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -2,7 +2,10 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title >登录</title>
+		<title class="pageTopTitle">登录{$web_setting.web_name}{$web_setting.web_title}</title>
+		<meta name="keywords" content="{$web_setting.key_words}" />
+		<meta name="description" content="{$web_setting.copyright}" />
+		<link rel="shortcut icon" href="{$web_setting.title_logo}" type="image/*" />
 		<link rel="stylesheet" href="__STATIC__/css/public/public.css" />
 		<link rel="stylesheet" href="__STATIC__/css/login/login.css" />
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js" ></script>
