--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -3,7 +3,10 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>注册</title>
+		<title class="pageTopTitle">注册{$web_setting.web_name}{$web_setting.web_title}</title>
+		<meta name="keywords" content="{$web_setting.key_words}" />
+		<meta name="description" content="{$web_setting.copyright}" />
+		<link rel="shortcut icon" href="{$web_setting.title_logo}" type="image/*" />
 		<link rel="stylesheet" href="__STATIC__/css/public/public.css" />
 		<link rel="stylesheet" href="__STATIC__/css/register/register.css" />
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
