--- a/application/index/view/buy/details.html
+++ b/application/index/view/buy/details.html
@@ -34,6 +34,15 @@
 							</div>
 						{/foreach}
 						</div>
+						{else/}
+						<div class="report">
+						
+							<div class="test der">
+								<p class="option"></p>
+								<p class="state"></p>
+							</div>
+						
+						</div>
 						{/if}
 						<!-- <div class="report"> -->
 							<!--检验报告-->
