优惠券领取bug修复

--- a/application/mobile/view/user/coupons.html
+++ b/application/mobile/view/user/coupons.html
@@ -35,7 +35,7 @@
                         <div class="coupon_msg">
                             <div class="price_box">
                                 ￥
-                                <span class="price">{$vo.money}</span>
+                                <span class="price">{$vo.money1}</span>
                                 <span class="original">满{$vo.quota1}减{$vo.money1}</span>
                             </div>
                             <p class="pro_ori">{$vo.name}</p>
