pc端：替换header.js 头部，修改为静态html

--- a/application/index/view/buy/details.html
+++ b/application/index/view/buy/details.html
@@ -12,7 +12,9 @@
 	<body>
 		<div class="wrapper">
 			<!-- 头部 -->
-            <div class="header"></div>
+            <div class="header">
+				{include file="header"}
+			</div>
             
 			<div class="content inner-wrap">
 				<div class="item">
@@ -35,24 +37,6 @@
 						{/foreach}
 						</div>
 						{/if}
-						<!-- <div class="report"> -->
-							<!--检验报告-->
-							<!-- <div class="test der">
-								<p class="option">约200项</p>
-								<p class="state">检验报告</p>
-							</div> -->
-							<!--基因位点-->
-							<!-- <div class="test der">
-								<p class="option">2000万</p>
-								<p class="state">基因位点</p>
-							</div> -->
-							<!--生成报告-->
-							<!-- <div class="test">
-								<p class="option">约2周</p>
-								<p class="state">生成报告</p>
-							</div> -->
-						<!-- </div> -->
-						<!--价格-->
 						<div class="price">￥{$list['price']}</div>
 						<!--购买按钮-->
 						<a class="buy_btn" href="/index/buy/submit_order?id={$list.id}">立即购买</a>
@@ -77,7 +61,6 @@
 		</div>
 		
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js" ></script>
-		<script type="text/javascript" src="__STATIC__/js/public/header.js" ></script>
 		<script type="text/javascript" src="__STATIC__/js/public/footer.js" ></script>
 	</body>
 </html>
