--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -16,7 +16,8 @@
 <div class="login_bigger">
 	<!--头部-->
 	<div class="header">
-    </div>
+		{include file="header"}
+	</div>
 	
     <div class="inner-wrap inner-wrap22" >	
     	
@@ -71,7 +72,6 @@
 		
 	</div>
 	<script src="__STATIC__/js/public/footer.js"></script>
-	<script src="__STATIC__/js/public/header.js"></script>
 	<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
 </div>
 
