--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -17,7 +17,7 @@
 		<div class="register_bigger">
 			<!--头部-->
 			<div class="header">
-
+				{include file="header"}
 			</div>
 
 			<div class="resigter_ear inner-wrap">
@@ -73,7 +73,6 @@
 		</div>
 		<script type="text/javascript" src="__STATIC__/js/resigter/addres.js"></script>
 		<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
-		<script src="__STATIC__/js/public/header.js"></script>
 		<script>
             var code = 0;
             var register_id = '{$register_id}';
