--- a/application/index/view/about/index.html
+++ b/application/index/view/about/index.html
@@ -16,7 +16,9 @@
 	<body>
 		<div class="register_bigger">
 			<!--头部-->
-			<div class="header"></div>
+			<div class="header">
+				{include file="header"}
+			</div>
 
 			<div class="aboutour_ear inner-wrap">
                  <div class="aboutour_center">
@@ -30,7 +32,6 @@
 			<div class="footer"></div>
 		</div>
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
-		<script src="__STATIC__/js/public/header.js"></script>
 		<script src="__STATIC__/js/public/footer.js"></script>
 		<script type="text/javascript" src="__STATIC__/js/resigter/addres.js"></script>
 		
