--- a/application/index/view/buy/buy.html
+++ b/application/index/view/buy/buy.html
@@ -58,7 +58,9 @@
 	<div class="wrapper">
 
 		<!-- 头部 -->
-		<div class="header"></div>
+		<div class="header">
+			{include file="header"}
+		</div>
 
 		<div class="inner-wrap">
 
@@ -99,7 +101,6 @@
 
 	</div>
 	<script src="__STATIC__/js/public/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
-	<script type="text/javascript" src="__STATIC__/js/public/header.js"></script>
 	<script type="text/javascript" src="__STATIC__/js/public/footer.js"></script>
 	<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
 </body>
