--- a/application/index/view/buy/submit_order.html
+++ b/application/index/view/buy/submit_order.html
@@ -12,7 +12,9 @@
 	<body>
 		<div class="wrapper">
 			<!--头部-->
-			<div class="header"></div>
+			<div class="header">
+				{include file="header"}
+			</div>
 			<!--内容-->
 			<div class="content inner-wrap">
 				<!--图片，增加数量区-->
@@ -110,7 +112,6 @@
 		</div>
 		
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js" ></script>
-		<script type="text/javascript" src="__STATIC__/js/public/header.js" ></script>
 		<script type="text/javascript" src="__STATIC__/js/public/footer.js" ></script>
 		<script>
     $('#province').on('change',function(){
