--- a/application/index/view/index/import_data.html
+++ b/application/index/view/index/import_data.html
@@ -16,7 +16,9 @@
 <body>
     <div class="wrapper">
         <!-- 头部 -->
-        <div class="header"></div>
+        <div class="header">
+            {include file="header"}
+        </div>
          
         <!-- 内容 -->
         <div class="content inner-wrap">
@@ -88,8 +90,7 @@
         
     </div>  
 
-    <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script> 
-    <script src="__STATIC__/js/public/header.js"></script>  
+    <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
     <script src="__STATIC__/js/public/footer.js"></script>
     <script src="__STATIC__/js/public/selectDate.js"></script>
     <script>
