--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -11,14 +11,19 @@
     <link rel="stylesheet" href="__STATIC__/css/public/swiper.css">
     <link rel="stylesheet" href="__STATIC__/css/public/public.css">
     <link rel="stylesheet" href="__STATIC__/css/home/index.css">
-    
 </head>
 <body>
+    <input type="hidden" id="web_logo" value="{$web_setting.web_logo}" />
     <div class="wrapper">
        <!-- 轮播图 -->
        <div class="swiper-container banner-wrap">
             <!-- 头部 -->
-            <div class="header"></div>
+            
+            <div class="header">
+                {include file="header"}
+            </div>
+
+
             {if condition="$is_login eq 1"}
             <input type="hidden" name="head_check" id="head_check" value="1">
             {else/}
