--- a/application/index/view/order/index.html
+++ b/application/index/view/order/index.html
@@ -12,7 +12,9 @@
 	<body>
 		<div class="wrapper">
 			<!-- 头部 -->
-			<div class="header"></div>
+			<div class="header">
+				{include file="header"}
+			</div>
             <!--内容区-->
             <div class="content inner-wrap">
             	
