--- a/application/index/view/referral/referral.html
+++ b/application/index/view/referral/referral.html
@@ -12,7 +12,9 @@
 	<body>
 		<div class="wrapper">
 			<!-- 头部 -->
-            <div class="header"></div>
+			<div class="header">
+					{include file="header"}
+			</div>
             
             <!--内容区-->
             <div class="content inner-wrap">
@@ -81,7 +83,6 @@
 		</div>
 		
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js" ></script>
-		<script type="text/javascript" src="__STATIC__/js/public/header.js" ></script>
 		<script type="text/javascript" src="__STATIC__/js/public/footer.js" ></script>
 	</body>
 </html>
