--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -16,35 +16,8 @@
 <div class="login_bigger">
 	<!--头部-->
 	<div class="header">
-                <div class="inner-wrap">
-                    <div class="logo">
-                        <a href="/index/index/index"></a>
-                    </div>
-                    <div class="nav">
-                        <ul>
-                            <li class="active"><a href="/index/index/index">首页</a></li>
-                            <li><a href="/index/gene/index">我的基因</a></li>
-                            <li><a href="/index/buy/buy">购买</a></li>
-                            <li><a href="/index/referral/referral">基因介绍</a></li>
-                            <li><a href="/index/order/index">我的订单</a></li>
-                            <li><a href="/index/about/index">关于我们</a></li>
-                        </ul>
-                    </div>
-                    <div class="login">
-                        <!-- 未登录状态 -->
-                        <div class="login-out">
-                            <a href="/index/login/login">登录</a>
-                            <a href="/index/login/register">注册</a>
-                        </div>
-                        <!-- 登录状态 -->
-                        <div class="login-in">
-                            <span class="fl"><img src="__STATIC__/images/public/user-avatar.png"></span>
-                            <a class="fl" href="#">退出</a>
-                        </div>
-                       
-                    </div>
-                </div>
-            </div>
+		{include file="header"}
+	</div>
 	
     <div class="inner-wrap inner-wrap22" >	
     	
@@ -89,7 +62,6 @@
 		
 		
 	</div>
-	<!--<script src="__STATIC__/js/public/footer.js"></script>-->
 </div>
 
 	 <script>
