--- a/application/index/view/referral/referral.html
+++ b/application/index/view/referral/referral.html
@@ -23,7 +23,7 @@
             		<!---->
             		<div class="ewm">
 	            		<div class="ewm-top">
-	            			<div class="logo_tu">logo</div>
+	            			<div class="logo_tu"><img src="{$web_setting.web_logo}" /></div>
 	            			<div class="logo_tu_right">
 	            				<h2>基因检测</h2>
 	            				<p class="publicEllipsis">解读基因的秘密，遇见未来的自己</p>
@@ -31,7 +31,7 @@
 	            		</div>
 	            		<!--二维码-->
 	            		<div class="code">
-	            			<img src="__STATIC__/images/public/code.png" />
+	            			<img src="{$web_setting.weixin_qrcode}" />
 	            		</div>
 	            		<p class="yards">扫码关注</p>
             		</div>
