--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -312,21 +312,20 @@
 
     })		
 	// $('#buy').click(function () {
-	// 	var id = {$info.id}
-	// 	console.log(id)
-	// 	return false
+	// 	var id = $('#id').val()
 	// 	$.ajax({
 	// 		type: 'post',
 	// 		url: "{:url('mobile/goods/order')}",
-	// 		data: { 'id': id, 'act': 'focus' },
+	// 		data: { 'id': id },
 
 	// 		success: function (data) {
 	// 			if (data.status == 1) {
 	// 				layer.msg(data.msg, { time: 1000 }, function () {
-	// 					acc.children().children().attr('src', '__STATIC__/img/purchase/product/collection-r@2x.png').addClass('active')
+						
 	// 				})
 	// 				// layer.msg(data.msg)
-	// 			} else {
+	// 			} 
+	// 			else {
 	// 				// layer.msg(data.msg)
 	// 				layer.msg(data.msg, function () {
 
