--- a/application/admin/view/article/category.html
+++ b/application/admin/view/article/category.html
@@ -30,8 +30,7 @@
 				</tr>
 				<tr class="text-c">
                     <th width="40">ID</th>
-                    <th width="150">分类名称</th>
-					<th width="150">上级分类</th>
+                    <th width="200">分类名称</th>
 					<th width="150">首页显示</th>
 					<th width="150">状态</th>
 					<th width="130">更新时间</th>
@@ -43,8 +42,14 @@
                 {volist name="list" id="vo"}
                 <tr class="text-c">
                     <td>{$vo.id}</td>
-                    <td>{$vo.name}</td>
-					<td>{if condition="isset($pname[$vo.parent_id])"}{$pname[$vo.parent_id]}{else}{$vo.parent_id}{/if}</td>
+                    <td class="text-l">
+						{switch name="$vo.level"}
+							{case value = "1"}{$vo.name}{/case}
+							{case value = "2"}&#8195;&#8195;|--&#8194;{$vo.name}{/case}
+							{case value = "3"}&#8195;&#8195;&#8195;&#8195;|--&#8194;{$vo.name}{/case}
+							{default/}{$vo.name}
+						{/switch}
+					</td>
 					<td class="td-view">
 						{if condition="$vo.is_view eq 1"}
 						<span class="label label-success radius">显示</span>
