--- a/application/admin/view/goods/category.html
+++ b/application/admin/view/goods/category.html
@@ -33,7 +33,6 @@
 				<tr class="text-c">
                     <th width="40">ID</th>
                     <th width="150">分类名称</th>
-					<th width="150">上级分类</th>
 					<th width="150">状态</th>
 					<th width="130">更新时间</th>
 					<th width="100">操作</th>
@@ -44,8 +43,14 @@
                 {volist name="list" id="vo"}
                 <tr class="text-c">
                     <td>{$vo.id}</td>
-                    <td>{$vo.name}</td>
-					<td>{if condition="isset($pname[$vo.parent_id])"}{$pname[$vo.parent_id]}{else}{$vo.parent_id}{/if}</td>
+                    <td class="text-l">
+						{switch name="$vo.level"}
+							{case value = "1"}{$vo.name}{/case}
+							{case value = "2"}&#8195;&#8195;|--&#8194;{$vo.name}{/case}
+							{case value = "3"}&#8195;&#8195;&#8195;&#8195;|--&#8194;{$vo.name}{/case}
+							{default/}{$vo.name}
+						{/switch}
+					</td>
 					<td class="td-status">
 						{if condition="$vo.is_lock eq 0"}
 						<span class="label label-success radius">正常</span>
